Menu, links, css

--- a/app.html
+++ b/app.html
@@ -2,28 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App</title>
-
-    <link rel="stylesheet" href="./styles/style.css">
-
+    <title>Document</title>
 </head>
 <body>
     
-<header>
-<a href="./index.html"><h1>CodeDrafts</h1></a>
-
-
-<button>O</button>
-
-</header>
-
-<h1>App</h1>
-
-<footer>
-    <h1>Footer</h1>
-    <p>&copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nemo quod quasi necessitatibus sint nesciunt neque sunt nihil! Ducimus perspiciatis illum modi quidem amet porro enim veritatis vel mollitia explicabo!</p>
-    </footer>
-
 </body>
 </html>
