--- a/app.html
+++ b/app.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./appStyle.css">
+    <title>CodeDrafts</title>
 </head>
 <body>
-    
+    <header><h1>lorem</h1></header>
+
+    <section><p>filtros, recomendações; nav lateral</p></section>
+
+    <section><button>O</button><p>botao de criar, copnfigurações</p></section>
+
+    <section></section>
+
+
+    <div><p>artigos</p></div>
+
+    <footer><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati impedit repellendus nesciunt doloribus laudantium dolore totam libero excepturi, perspiciatis perferendis adipisci esse magnam ad. Asperiores atque fuga dolore perspiciatis totam!</p></footer>
 </body>
 </html>
