--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>CodeDrafts | Home</title>
 
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./images/logoIcon.png">
@@ -11,15 +11,16 @@
     <script src="./scripts/moreOptions.js"></script>
 
 </head>
-<body>
-    
+<body> 
 
     <header>
         <a href="#" class="Principal"> <img src="Images\logoIcon.png" id="icone"> </a>
         <ul class="Lista">
-            <li> <a> Home </a> </li>
-            <li> <a href="cadastro.html" id="aHover">Cadastro</a> </li>
-            <li> <a href="login.html" id="aHover">Login</a> </li>
+            <li> <a href="#"> Home </a> </li>
+            <li> <a href="#sobre" id="aHover">Sobre</a> </li>
+            <li> <a href="./app.html" id="aHover">
+                
+            </a> </li>
             <li> <a> <button onclick="MudarTema()"> <img src="./Images/DarkIcon.png" id="tema"> </button></a></li>
         </ul>
 
@@ -27,9 +28,8 @@
             <img src="./Images/Menu.png" id="IconeMenu">
         </div>
 
-    </header> <br><br><br><br>
+    </header>
 
-<!------------------------------------------------------->
 
 <section class="hero">
     <h1>CodeDrafts</h1>
