aprimorar página principal, estruturar app

--- a/app.html
+++ b/app.html
@@ -4,21 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./appStyle.css">
     <title>CodeDrafts</title>
+    <link rel="stylesheet" href="./styles/appStyle.css">
 </head>
 <body>
-    <header><h1>lorem</h1></header>
+    <header>
+        <h1>Lorem</h1>
 
-    <section><p>filtros, recomendações; nav lateral</p></section>
+        <div id="search">
+            <input type="text">
+        </div>
 
-    <section><button>O</button><p>botao de criar, copnfigurações</p></section>
+        <button>users</button>
+        
 
-    <section></section>
+    </header>
 
+    <button id="btnConfigs">O</button>
 
-    <div><p>artigos</p></div>
+    <div id="pageContent">
+        <aside id="filter">
+            <p>filtros, recomendações; nav lateral</p>
 
-    <footer><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati impedit repellendus nesciunt doloribus laudantium dolore totam libero excepturi, perspiciatis perferendis adipisci esse magnam ad. Asperiores atque fuga dolore perspiciatis totam!</p></footer>
+            <footer><p>footer</p></footer>
+        </aside>
+
+        <article id="posts"><p>artigos</p></article>
+
+        <aside id="ranks"><p>ranking..etc</p></aside>
+    </div>
+
 </body>
 </html>
