--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
         <a href="#" class="Principal"> <img src="Images\logoIcon.png" id="icone"> </a>
         <ul class="Lista">
             <li> <a href="#"> Home </a> </li>
+            <li> <a href="./app.html" id="aHover">App</a> </li>
             <li> <a href="#sobre" id="aHover">Sobre</a> </li>
-            <li> <a href="./app.html" id="aHover">
-                
-            </a> </li>
-            <li> <a> <button onclick="MudarTema()"> <img src="./Images/DarkIcon.png" id="tema"> </button></a></li>
+            <li> <a href="#equipe" id="aHover">Equipe</a> </li>
+            <a class="Oculto"> <button onclick="MudarTema()"> <img src="./Images/DarkIcon.png" id="tema"> </button></a>
         </ul>
+        
+        <a class="TemaButton"> <button onclick="MudarTema()"> <img src="./Images/DarkIcon.png" id="tema"> </button></a>
 
         <div class="Bx bx-menu" id="IconeMenu">
             <img src="./Images/Menu.png" id="IconeMenu">
         </div>
-
     </header>
 
 
 <section class="hero">
-    <h1>CodeDrafts</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptatem aut maiores nihil! Molestiae facere velit harum ut autem veniam, vitae fuga laborum sunt dolore, iusto doloremque ullam, unde fugiat.</p>
+    <h1>CodeDrafts</h1> <br>
+    <p>Uma plataforma em que você encontra tudo que você precisa</p>
 
 </section>
 
