consertar caminho para diretório de imagens

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <body> 
 
     <header>
-        <a href="#" class="Principal"> <img src="Images\logoIcon.png" id="icone"> </a>
+        <a href="#" class="Principal"> <img src="images\logoIcon.png" id="icone"> </a>
         <ul class="Lista">
             <li> <a href="#"> Home </a> </li>
             <li> <a href="./app.html" id="aHover">App</a> </li>
             <li> <a href="#sobre" id="aHover">Sobre</a> </li>
             <li> <a href="#equipe" id="aHover">Equipe</a> </li>
-            <a class="Oculto"> <button onclick="MudarTema()"> <img src="./Images/DarkIcon.png" id="tema"> </button></a>
+            <a class="Oculto"> <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button></a>
         </ul>
         
-        <a class="TemaButton"> <button onclick="MudarTema()"> <img src="./Images/DarkIcon.png" id="tema"> </button></a>
+        <a class="TemaButton"> <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button></a>
 
         <div class="Bx bx-menu" id="IconeMenu">
-            <img src="./Images/Menu.png" id="IconeMenu">
+            <img src="./images/Menu.png" id="IconeMenu">
         </div>
     </header>
 
