--- a/index.html
+++ b/index.html
@@ -33,20 +33,40 @@
 
 <section class="hero">
     <h1>CodeDrafts</h1> <br>
-    <p>Uma plataforma em que você encontra tudo que você precisa</p>
+    <p>A plataforma em que você encontra tudo que você precisa</p>
 
 </section>
 
 
 
-<section id="sobre">
-<h1>Sobre</h1>
+<section class="sobre" id="sobre">
+
+<img src="./images/DarkIcon.png" id="ImagemCentral">
+
+<div>
+<span> <h1>Sobre</h1> </span>
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, recusandae voluptatem, incidunt ullam temporibus amet cum hic deleniti est ea architecto possimus minima soluta, dignissimos expedita veniam nostrum quam neque?</p>
+</div>
+
+
+
 </section>
 
-<footer>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea sit veritatis at dicta dignissimos repellendus animi beatae doloremque accusamus ipsam, sequi unde cumque accusantium, ut quos nihil nesciunt laboriosam vel.</p>
-</footer>
+<section class="sobre equipe" id="equipe">
+
+    <div>
+    <span> <h1>Equipe</h1> </span>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, recusandae voluptatem, incidunt ullam temporibus amet cum hic deleniti est ea architecto possimus minima soluta, dignissimos expedita veniam nostrum quam neque?</p>
+    </div>
+    
+    <img src="./images/DarkIcon.png" id="ImagemCentral">
+    
+    </section>
+
+    <footer>
+        <p>CodeDrafts </p>
+        <p id="creditos">Veja o projeto completo no <a href="https://github.com/cc23135/codedrafts" target="_blank">Github</a></p>
+    </footer>
 
 </body>
 </html>
