--- a/app.html
+++ b/app.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeDrafts</title>
     <link rel="stylesheet" href="./styles/appStyle.css">
+    <script src="./scripts/changeTheme.js"></script>
 </head>
 <body>
     <header>
@@ -16,11 +17,9 @@
         </div>
 
         <button>users</button>
-        
-
     </header>
 
-    <button id="btnConfigs">O</button>
+    <button id="btnConfigs" onclick="MudarTemaApp()">Escuro</button>
 
     <div id="pageContent">
         <aside id="filter">
@@ -29,7 +28,57 @@
             <footer><p>footer</p></footer>
         </aside>
 
-        <article id="posts"><p>artigos</p></article>
+        <article id="posts">
+            <h1>Resultados</h1> <br>
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+
+                <i>By <a href="">Ion Mateus</a></i>
+
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div>
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+
+                <i>By <a href="">Ion Mateus</a></i>
+
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div>
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+
+                <i>By <a href="">Ion Mateus</a></i>
+
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div>
+
+            
+
+        </article>
 
         <aside id="ranks"><p>ranking..etc</p></aside>
     </div>
