--- a/app.html
+++ b/app.html
@@ -23,9 +23,17 @@
 
     <div id="pageContent">
         <aside id="filter">
-            <p>filtros, recomendações; nav lateral</p>
+            <h1>Filtro</h1>
 
-            <footer><p>footer</p></footer>
+            <input type="checkbox"><label for=""> filtro</label><br>
+            <input type="checkbox"><label for=""> filtro</label><br>
+            <input type="checkbox"><label for=""> filtro</label><br>
+            <input type="checkbox"><label for=""> filtro</label><br>
+            <input type="checkbox"><label for=""> filtro</label><br>
+
+            <footer>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil qui ex nemo sapiente quasi suscipit reiciendis obcaecati officiis, veritatis consequuntur culpa, fugit officia ipsam aspernatur ab ipsum molestiae rem facere.</p>
+            </footer>
         </aside>
 
         <article id="posts">
@@ -33,54 +41,127 @@
 
             <div id="postResult">
                 <a href="#"><h1>A Post</h1></a>
-
-                <i>By <a href="">Ion Mateus</a></i>
-
+                <i>By <a href="#">Ion Mateus</a></i>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-
                 <b>
                     <a href="#">Programming</a> |
                     <a href="#">C++</a> |
                     <a href="#">Google</a> |
                     <a href="#">Java</a>
                 </b>
-            </div>
+            </div> 
 
             <div id="postResult">
                 <a href="#"><h1>A Post</h1></a>
-
-                <i>By <a href="">Ion Mateus</a></i>
-
+                <i>By <a href="#">Ion Mateus</a></i>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-
                 <b>
                     <a href="#">Programming</a> |
                     <a href="#">C++</a> |
                     <a href="#">Google</a> |
                     <a href="#">Java</a>
                 </b>
-            </div>
+            </div> 
 
             <div id="postResult">
                 <a href="#"><h1>A Post</h1></a>
-
-                <i>By <a href="">Ion Mateus</a></i>
-
+                <i>By <a href="#">Ion Mateus</a></i>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-
                 <b>
                     <a href="#">Programming</a> |
                     <a href="#">C++</a> |
                     <a href="#">Google</a> |
                     <a href="#">Java</a>
                 </b>
-            </div>
+            </div> 
 
-            
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+                <i>By <a href="#">Ion Mateus</a></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div> 
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+                <i>By <a href="#">Ion Mateus</a></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div> 
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+                <i>By <a href="#">Ion Mateus</a></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div> 
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+                <i>By <a href="#">Ion Mateus</a></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div> 
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+                <i>By <a href="#">Ion Mateus</a></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div> 
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+                <i>By <a href="#">Ion Mateus</a></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div> 
+
+            <div id="postResult">
+                <a href="#"><h1>A Post</h1></a>
+                <i>By <a href="#">Ion Mateus</a></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                <b>
+                    <a href="#">Programming</a> |
+                    <a href="#">C++</a> |
+                    <a href="#">Google</a> |
+                    <a href="#">Java</a>
+                </b>
+            </div> 
 
         </article>
 
-        <aside id="ranks"><p>ranking..etc</p></aside>
+        <aside id="ranks"><h1>Rank</h1></aside>
     </div>
 
 </body>
