Adicionar responsividade em app.html

--- a/app.html
+++ b/app.html
@@ -7,8 +7,9 @@
     <title>CodeDrafts</title>
     <link rel="stylesheet" href="./styles/appStyle.css">
     <script src="./scripts/changeTheme.js"></script>
+    <script src="./scripts/footerOptions.js"></script>
 </head>
-<body>
+<body onload="footer()">
     <header>
         <h1>Lorem</h1>
 
@@ -162,7 +163,13 @@
         </article>
 
         <aside id="ranks"><h1>Rank</h1></aside>
+
     </div>
+
+    <footer class="Bx bx-menu" id="ToolBar">
+        <p id="filtroFooter">Filtro</p>
+        <p id="rankFooter">Ranking</p>
+    </footer>
 
 </body>
 </html>
