--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <li> <a href="./app.html" id="aHover">App</a> </li>
             <li> <a href="#sobre" id="aHover">Sobre</a> </li>
             <li> <a href="#equipe" id="aHover">Equipe</a> </li>
-            <a class="Oculto"> <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button></a>
+            <a class="Oculto"> <button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema2"> </button></a>
         </ul>
         
-        <a class="TemaButton"> <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button></a>
+        <a class="TemaButton"> <button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema"> </button></a>
 
         <div class="Bx bx-menu" id="IconeMenu">
             <img src="./images/Menu.png" id="IconeMenu">
