--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body> 
 
     <header>
-        <a href="#" class="Principal"> <img src="images\logoIcon.png" id="icone"> </a>
+        <a href="#" class="Principal"> <img style="width:200px" src="./images/iconWithText.png" id="icone"> </a>
         <ul class="Lista">
             <li> <a href="#"> Home </a> </li>
             <li> <a href="./app.html" id="aHover">App</a> </li>
