--- a/app.html
+++ b/app.html
@@ -11,19 +11,19 @@
 </head>
 <body onload="footer()">
     <header>
-        <h1>Lorem</h1>
+        <h1><a href="index.html">Lorem</a></h1>
 
         <div id="search">
             <input type="text">
         </div>
 
-        <button>users</button>
+        <button><a href="user.html">users</a></button>
     </header>
 
     <button id="btnConfigs" onclick="MudarTemaApp()">Escuro</button>
 
     <div id="pageContent">
-        <aside id="filter">
+        <aside id="filter"> <br>
             <h1>Filtro</h1>
 
             <input type="checkbox"><label for=""> filtro</label><br>
@@ -162,7 +162,9 @@
 
         </article>
 
-        <aside id="ranks"><h1>Rank</h1></aside>
+        <aside id="ranks"> <br>
+            <h1>Rank</h1>
+        </aside>
 
     </div>
 
