--- a/user.html
+++ b/user.html
@@ -4,21 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User</title>
+    <title>User Page</title>
 
     <link rel="stylesheet" href="./styles/estiloUser.css">
-    <script src="./scripts/scriptUser.js"></script>
+    <script src="./scriptUser.js"></script>
 
 </head>
 <body>
     <div id="geral">
         <div id="topper">
-            <div id="mainInfo"></div>
+            <div id="mainInfo">
+                <div id="boxAvatar">
+                    <img src="" id="userAvatar">
+                </div>
+                <div id="boxTexto">
+                    <div id="boxUserName">
+                        <p id="userName"></p>
+                    </div>
+                    <div id="boxInfo">
+                        <p id="nomeDoUsuario"></p>
+                        <p id="pontos"></p>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div id="center">
-            <div id="postsDoUser"></div>
-            <aside id="conquistas"></aside>
+            <aside id="boxConquistas">
+                <div id="quadradoConquistas">
+
+                </div>
+            </aside>
+            <div id="boxPostsDoUser">
+
+            </div>
         </div>
     </div>
     <div id="side">
