--- a/user.html
+++ b/user.html
@@ -32,11 +32,18 @@
         <div id="center">
             <aside id="boxConquistas">
                 <div id="quadradoConquistas">
+                    <div class="cardConquista">
+                        <div class="boxIconeConquista">
 
+                        </div>
+                        <div class="textoConquista">
+                            
+                        </div>
+                    </div>
                 </div>
             </aside>
             <div id="boxPostsDoUser">
-
+                
             </div>
         </div>
     </div>
