--- a/user.html
+++ b/user.html
@@ -15,15 +15,15 @@
         <div id="topper">
             <div id="mainInfo">
                 <div id="boxAvatar">
-                    <img src="" id="userAvatar">
+                    <img src="./images/LightIcon.png" id="userAvatar">
                 </div>
                 <div id="boxTexto">
                     <div id="boxUserName">
-                        <p id="userName"></p>
+                        <p id="nomeDoUsuario">Nome do usuário</p>
                     </div>
                     <div id="boxInfo">
-                        <p id="nomeDoUsuario"></p>
-                        <p id="pontos"></p>
+                        <p id="userName">@Username</p>
+                        <p id="pontos">0</p>
                     </div>
                 </div>
             </div>
