páginas de cadastro e login

--- a/app.html
+++ b/app.html
@@ -11,13 +11,13 @@
 </head>
 <body onload="footer()">
     <header>
-        <h1><a href="index.html">Lorem</a></h1>
+        <h1><a href="index.html">CodeDrafts</a></h1>
 
         <div id="search">
             <input type="text">
         </div>
 
-        <button><a href="user.html">users</a></button>
+        <a href="./user.html"><button>Users</button></a>
     </header>
 
     <button id="btnConfigs" onclick="MudarTemaApp()">Escuro</button>
