--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CodeDrafts | Home</title>
 
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="icon" href="./images/logoIcon.png">
+    <link rel="icon" href="./images/logoIconWithoutBackground.png">
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/moreOptions.js"></script>
 
