--- a/index.html
+++ b/index.html
@@ -70,18 +70,17 @@
         <div id="pessoaEquipe">
             <h1>Arthur</h1><br>
             <p>Lorem</p><br>
-            <a href="github.com">GitHub</a>
+            <a href="https://arthurgamajorge.github.io" target="_blank">ArthurGamaJorge.GitHub.io</a>
         </div>
         <div id="pessoaEquipe">
             <h1>Daniel</h1><br>
             <p>Lorem</p><br>
-            <a href="github.com">GitHub</a>
+            <a href="https://DanielDCCampos.github.io" target="_blank">DanielDCCampos.GitHub.io</a>
         </div>
         <div id="pessoaEquipe">
             <h1>Ion</h1><br>
             <p>Lorem</p><br>
-            <a href="github.com">GitHub</a><br><br>
-            <img width="100px" src="./images/lorem.png" alt="">
+            <a href="https://ionmateus.github.io" target="_blank">IonMateus.GitHub.io</a><br><br>
         </div>
     </div>
 
