--- a/user.html
+++ b/user.html
@@ -58,10 +58,36 @@
 
                 </div>
             </aside>
+
+
             <div id="boxPostsDoUser">
 
 
-                <div id="postResult">
+                <div class="postResult">
+                    <a href="#"><h1>A Post</h1></a>
+                    <i>By <a href="#">Ion Mateus</a></i>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum fuga, officia ut exercitationem quod vitae quibusdam minima iusto modi ab, similique accusamus. Quae distinctio molestias alias iste consectetur quas ab?</p>
+                    <b>
+                        <a href="#">Programming</a> |
+                        <a href="#">C++</a> |
+                        <a href="#">Google</a> |
+                        <a href="#">Java</a>
+                    </b>
+                </div>
+
+                <div class="postResult">
+                    <a href="#"><h1>A Post</h1></a>
+                    <i>By <a href="#">Ion Mateus</a></i>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                    <b>
+                        <a href="#">Programming</a> |
+                        <a href="#">C++</a> |
+                        <a href="#">Google</a> |
+                        <a href="#">Java</a>
+                    </b>
+                </div>
+
+                <div class="postResult">
                     <a href="#"><h1>A Post</h1></a>
                     <i>By <a href="#">Ion Mateus</a></i>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
