Melhorar página user: tornar mais responsível, consertar posts

--- a/user.html
+++ b/user.html
@@ -52,6 +52,83 @@
                         </div>
                         <div class="textoConquista">
                             <p>
+                                rfe
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="cardConquista">
+                        <div class="boxIconeConquista">
+                            <img src="./images/prizeIcon.png">
+                        </div>
+                        <div class="textoConquista">
+                            <p>
+                                rfe
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="cardConquista">
+                        <div class="boxIconeConquista">
+                            <img src="./images/prizeIcon.png">
+                        </div>
+                        <div class="textoConquista">
+                            <p>
+                                rfe
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="cardConquista">
+                        <div class="boxIconeConquista">
+                            <img src="./images/prizeIcon.png">
+                        </div>
+                        <div class="textoConquista">
+                            <p>
+                                rfe
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="cardConquista">
+                        <div class="boxIconeConquista">
+                            <img src="./images/prizeIcon.png">
+                        </div>
+                        <div class="textoConquista">
+                            <p>
+                                rfe
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="cardConquista">
+                        <div class="boxIconeConquista">
+                            <img src="./images/prizeIcon.png">
+                        </div>
+                        <div class="textoConquista">
+                            <p>
+                                rfe
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="cardConquista">
+                        <div class="boxIconeConquista">
+                            <img src="./images/prizeIcon.png">
+                        </div>
+                        <div class="textoConquista">
+                            <p>
+                                rfe
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="cardConquista">
+                        <div class="boxIconeConquista">
+                            <img src="./images/prizeIcon.png">
+                        </div>
+                        <div class="textoConquista">
+                            <p>
                                 fweq
                             </p>
                         </div>
