--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="#" class="Principal"> <img style="width:200px" src="./images/iconWithText.png" id="icone"> </a>
         <ul class="Lista">
             <li> <a href="./app.html" id="aHover">App</a> </li>
-            <li> <a href="#sobre" id="aHover" class="class2">Sobre</a> </li>
-            <li> <a href="#equipe" id="aHover" class="class2">Equipe</a> </li>
+            <li> <a href="#sobre" id="aHover">Sobre</a> </li>
+            <li> <a href="#equipe" id="aHover">Equipe</a> </li>
             <a class="Oculto"> <button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema2"> </button></a>
         </ul>
         
@@ -61,9 +61,7 @@
 
 <div>
 <span> <h1>Equipe</h1> </span><br>
-<p>
-    
-    Este projeto foi criado por:
+<p id="pCriadores"> Este projeto foi criado por: </p>
     <br><br>
     <div id="equipeDiv">
         <div id="pessoaEquipe">
@@ -88,7 +86,6 @@
         </div>
     </div>
 
-</p>
 
 </div>
  
