--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 <div>
 <span> <h1>Equipe</h1> </span><br>
 <p>
-    
     Este projeto foi criado por:
-    <br><br>
+</p>
+
+<br><br>
+
     <div id="equipeDiv">
         <div id="pessoaEquipe">
             <h1>Arthur</h1><br>
@@ -76,7 +78,7 @@
         <div id="pessoaEquipe">
             <h1>Daniel</h1><br>
             <p>Lorem</p><br>
-            <a href="https://DanielDCCampos.github.io" target="_blank">DanielDCCampos.GitHub.io</a>
+            <a href="https://cc23124.github.io" target="_blank">Cc23124.GitHub.io</a>
 
         </div>
         <div id="pessoaEquipe">
@@ -87,8 +89,6 @@
 
         </div>
     </div>
-
-</p>
 
 </div>
  
