--- a/app.html
+++ b/app.html
@@ -170,7 +170,52 @@
         </article>
 
         <aside id="ranks"> <br>
-            <h1>Rank</h1>
+            <h1>Rank</h1> <br>
+            <div id="rankDiv">
+
+                <div class="rankResult">
+                    <img src="./images/lorem.png">
+                    <h1>Daniel</h1>
+                    <p>001</p>
+                </div>
+
+                <div class="rankResult">
+                    <img src="./images/lorem.png">
+                    <h1>D</h1>
+                    <p>001</p>
+                </div>
+
+                <div class="rankResult">
+                    <img src="./images/lorem.png">
+                    <h1>Daniel folr...</h1>
+                    <p>9999</p>
+                </div>
+
+                <div class="rankResult">
+                    <img src="./images/lorem.png">
+                    <h1>Daniel folr...</h1>
+                    <p>9999</p>
+                </div>
+
+                <div class="rankResult">
+                    <img src="./images/lorem.png">
+                    <h1>Daniel folr...</h1>
+                    <p>9999</p>
+                </div>
+
+                <div class="rankResult">
+                    <img src="./images/lorem.png">
+                    <h1>Daniel folr...</h1>
+                    <p>9999</p>
+                </div>
+
+                <div class="rankResult">
+                    <img src="./images/lorem.png">
+                    <h1>Daniel folr...</h1>
+                    <p>9999</p>
+                </div>
+
+            </div>
         </aside>
 
     </div>
