--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="./images/logoIconWithoutBackground.png">
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/moreOptions.js"></script>
+    <script src="./scripts/sounds.js"></script>
 
 </head>
 <body> 
