--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="TemaButton"> <button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema"> </button></a>
 
         <div class="Bx bx-menu" id="IconeMenu">
-            <img src="./images/Menu.png" id="IconeMenu">
+            <img src="./images/Menu.png" id="IconeMenu" class="IconeMenuImg">
         </div>
     </header>
 
