terminar ações responsivas, necessário ajustar valores e polir

--- a/user.html
+++ b/user.html
@@ -21,8 +21,8 @@
     <a class="botao" id="btnVoltar" href="./app.html">Voltar</a>
 
    <header id="menuHeader">
-        <button class="headerButton" id="headerConfigs" onclick="MudarTemaApp()">Escuro</button>
-        <a class="headerButton" id="headerVoltar" href="./app.html">Voltar</a>
+        <button class="headerButton" onclick="MudarTemaApp()">Escuro</button>
+        <a class="headerButton" href="./app.html">Voltar</a>
    </header>
 
    <div id="pageContent">
