--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./images/logoIconWithoutBackground.png">
-    <script src="./scripts/changeTheme.js"></script>
-    <script src="./scripts/moreOptions.js"></script>
-    <script src="./scripts/sounds.js"></script>
 
+    <script src="./scripts/avoidFlickering.js"></script>
 </head>
 <body> 
 
@@ -96,5 +94,8 @@
         <p id="creditos">Veja o projeto completo no <a href="https://github.com/cc23135/codedrafts" target="_blank">Github</a></p>
     </footer>
 
+    <script src="./scripts/moreOptions.js"></script>
+    <script src="./scripts/sounds.js"></script>
+    <script src="./scripts/changeTheme.js"></script>
 </body>
 </html>
