adaptar botão de mudar tema

--- a/user.html
+++ b/user.html
@@ -20,8 +20,8 @@
     <a class="botao" id="btnVoltar" href="./app.html">Voltar</a>
 
    <header id="menuHeader">
-        <button class="headerButton" onclick="MudarTema()"><img src="./images/LightIcon.png" id="tema2"></button>
-        <a class="headerButton" href="./app.html">Voltar</a>
+        <button class="headerButton" id="headerConfigs" onclick="MudarTema()" id="menuConfigs"><img src="./images/LightIcon.png" id="tema2"></button>
+        <a class="headerButton" id="headerVoltar" href="./app.html">Voltar</a>
    </header>
 
    <div id="pageContent">
