Estilizar search bar

--- a/app.html
+++ b/app.html
@@ -17,16 +17,18 @@
         <a href="index.html"><img src="./images/iconWithText.png"></a>
         </div>
 
-        <div id="search">
-            <input type="text">
-        </div> 
+        <div class="input-box" id="search">
+            <i class="uil uil-search"></i>
+            <input type="text" placeholder="Search here..." />
+            <button class="button">Search</button>
+          </div>
 
         <div id="botões">
-        <a href="./user.html"><button>Users</button></a>
+        <a href="./user.html"><button><img src="./images/noUserImage.png"></button></a>
         </div>
     </header>
 
-    <a class="Oculto"> <img src="#" id="tema2" class="IconeMenuImg"> </button></a>
+    <a class="Oculto"> <img src="#" id="tema2" class="IconeMenuImg"></a>
 
 <button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema"> </button>
 
