Adicionar script para append de posts

--- a/app.html
+++ b/app.html
@@ -230,5 +230,6 @@
 
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/footerOptions.js"></script>
+    <script src="./scripts/addPost.js"></script>
 </body>
 </html>
