Iniciar página de configurações

--- a/app.html
+++ b/app.html
@@ -24,6 +24,7 @@
           </div>
 
         <div id="botões">
+        <a href="./configurations.html"><button><img src="./images/settings.png"></button></a>
         <a href="./user.html"><button><img src="./images/noUserImage.png"></button></a>
         </div>
     </header>
