--- a/user.html
+++ b/user.html
@@ -150,10 +150,10 @@
                 </aside>
 
 
-                <div id="boxPostsDoUser">
+                <div id="posts">
 
 
-                    <div class="postResult">
+                    <div id="postResult">
                         <a href="#"><h1>A Post</h1></a>
                         <i>By <a href="#">Ion Mateus</a></i>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum fuga, officia ut exercitationem quod vitae quibusdam minima iusto modi ab, similique accusamus. Quae distinctio molestias alias iste consectetur quas ab?</p>
@@ -165,7 +165,7 @@
                         </b>
                     </div>
 
-                    <div class="postResult">
+                    <div id="postResult">
                         <a href="#"><h1>A Post</h1></a>
                         <i>By <a href="#">Ion Mateus</a></i>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
@@ -177,7 +177,7 @@
                         </b>
                     </div>
 
-                    <div class="postResult">
+                    <div id="postResult">
                         <a href="#"><h1>A Post</h1></a>
                         <i>By <a href="#">Ion Mateus</a></i>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
@@ -229,6 +229,7 @@
     <p class="IconeMenuImg"></p> <!--não remover-->
     <script src="./scripts/scriptUser.js"></script>
     <script src="./scripts/changeTheme.js"></script>
+    <script src="./scripts/addPost.js"></script>
 
 </body>
 </html>
