Optmizar mudança de tema e estilização da página de configurações

--- a/configurations.html
+++ b/configurations.html
@@ -12,21 +12,23 @@
 </head>
 <body>
 
-    <a class="Oculto"> <img src="#" id="tema2" class="IconeMenuImg"></a>
-
     <section class="navbarLateral">
         <ul>
-            <li><a href="app.html">Voltar</a></li>
-            <li>Aparência</li>
-            <li>Informações</li>
-            <li>Extra</li>
+            <li id="Principal"> <img src="./images/setaEsquerda.png"> <a href="app.html">Voltar</a></li>
+            <li>Aparência <img src="./images/seta.png"></li>
+            <li>Informações <img src="./images/seta.png"></li>
+            <li>Extra <img src="./images/seta.png"></li>
+            <li>FAQ <img src="./images/seta.png"></li>
+            <li>Sair <img src="./images/seta.png"></li>
         </ul>
     </section>
 
     <section class="Aparencia">
         <h1>Aparência</h1>
         <div class="Conteudo">
-                <button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema"> </button> 
+                <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button> 
+                <p>Tema</p>
+                <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button> 
                 <p>Tema</p>
         </div>
     </section>
