--- a/user.html
+++ b/user.html
@@ -16,11 +16,11 @@
 </head>
 <body>
 
-    <button class="botao" id="btnConfigs" onclick="MudarTema()"><img src="./images/LightIcon.png" id="tema"></button>
+    <button class="botao" id="btnConfigs" onclick="MudarTema()"><img src="./images/DarkIcon.png" id="tema"></button>
     <a class="botao" id="btnVoltar" href="./app.html">Voltar</a>
 
    <header id="menuHeader">
-        <button class="headerButton" id="headerConfigs" onclick="MudarTema()" id="menuConfigs"><img src="./images/LightIcon.png" id="tema2"></button>
+        <button class="headerButton" id="headerConfigs" onclick="MudarTema()" id="menuConfigs"><img src="./images/DarkIcon.png" id="tema2"></button>
         <a class="headerButton" id="headerVoltar" href="./app.html">Voltar</a>
    </header>
 
@@ -226,7 +226,6 @@
         </aside>
     </div>
 
-    <p class="IconeMenuImg"></p> <!--não remover-->
     <script src="./scripts/scriptUser.js"></script>
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/addPost.js"></script>
