--- a/app.html
+++ b/app.html
@@ -29,9 +29,7 @@
         </div>
     </header>
 
-    <a class="Oculto"> <img src="#" id="tema2" class="IconeMenuImg"></a>
-
-<button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema"> </button>
+<button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button>
 
     <div id="pageContent">
         <aside id="filter"> <br>
