--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeDrafts | Home</title>
 
+    <link rel="stylesheet" href="./styles/styleGenerico.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./images/logoIconWithoutBackground.png">
 
@@ -18,10 +19,10 @@
             <li> <a href="./app.html" id="aHover">App</a> </li>
             <li> <a href="#sobre" id="aHover">Sobre</a> </li>
             <li> <a href="#equipe" id="aHover">Equipe</a> </li>
-            <a class="Oculto"> <button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema2"> </button></a>
+            <a class="Oculto"> <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema2"> </button></a>
         </ul>
         
-        <a class="TemaButton"> <button onclick="MudarTema()"> <img src="./images/LightIcon.png" id="tema"> </button></a>
+        <a class="TemaButton"> <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button></a>
 
         <div class="Bx bx-menu" id="IconeMenu">
             <img src="./images/Menu.png" id="IconeMenu" class="IconeMenuImg">
@@ -31,7 +32,7 @@
 
 <section class="hero">
     <h1>CodeDrafts</h1> <br>
-    <p>A plataforma em que você encontra tudo que você precisa</p>
+    <p>A plataforma em que você encontra tudo de que você precisa</p>
 
 </section>
 
